--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "freterapido-code-challenge",
   "version": "0.0.0",
+  "author": "Ariadne Silva",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -17,7 +18,6 @@
     "@angular/forms": "^16.1.0",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/router": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
