--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Ariadne Silva",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
